attempt to fix overflow issues

--- a/src/App.css
+++ b/src/App.css
@@ -201,10 +201,7 @@ h1 {
   color: black;
   
 }
-html, body {
-  overflow-x: hidden;
-  position: relative;
-}
+
 #back {
   display: flex;
   color: white;
@@ -357,6 +354,9 @@ h2 {
   margin: 20px;
   padding: 3px;
   display: flex;
+  width: 95%;
+  word-wrap: break-all;
+  overflow: hidden;
   
 }
 
@@ -394,7 +394,7 @@ margin-left: 10px;
   align-items: center;
 }
 .authorBody {
-  width: 100%;
+ width: 95%;
   margin: 10px;
   word-wrap: break-word;
   white-space: normal;
